# Chat

./: CMakeLists.txt  Chat.cpp  Chat.h  ChatNotFoundException.cpp  ChatNotFoundException.h  GroupChat.cpp  GroupChat.h  Message.cpp  Message.h  SystemRegister.cpp  SystemRegister.h  User.cpp  User.h
test/: CMakeLists.txt  chatTest.cpp  groupChatTest.cpp  messageTest.cpp  userTest.cpp
